# pluginator

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build.sh  migration.md  pluginator.config
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  general-feedback.yml  plugin-developer-request.yml
.github/workflows/: discord-changelog.yml
config/: .env.example  pluginator.config  pluginator.config.example
data/: plugins.json.example
docs/: CHANGELOG.md  COMMANDS.md  ERROR_CODES.md  INSTALLATION.md  PLUGIN_REGISTRY.md  SECURITY.md  TIER_SYSTEM.md  TODO.md  TROUBLESHOOTING.md  USER_GUIDE.md
include/: colors.hpp  config.hpp  http_client.hpp  json_helper.hpp  lang.hpp  logger.hpp  plugin.hpp  plugin_manager.hpp  pluginator.hpp  progress_bar.hpp  purpur_manager.hpp  utils.hpp  version.hpp.in
lang/: en.json
scripts/: install.sh
src/: colors.cpp  config.cpp  http_client.cpp  json_helper.cpp  lang.cpp  logger.cpp  main.cpp  plugin_manager.cpp  pluginator.cpp  progress_bar.cpp  purpur_manager.cpp  utils.cpp
types/: config.ts
